<resources>
    <string name="app_name">CaijiMovie</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="me">Me</string>
    <string name="recommend">Recommend</string>
    <string name="caiji">蔡 姬</string>
    <string name="movie">电 影</string>
    <string name="create_a_new_account">Create a New Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign UP</string>
    <string name="log_into_your_account">Sign In Your Account</string>
    <string name="passwordConfirm">Confirm Password</string>
    <string name="menu_search">Search</string>
    <string name="rate">评分:</string>
</resources>
