<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignInFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="15dp"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/txtEmali"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/txt_shape"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />


        <EditText
            android:id="@+id/txtPsw"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/txt_shape"
            android:ems="10"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/sign_in"
            android:textColor="#FFFFFF" /><!--android:background="#eeeeee"-->

    </LinearLayout>

</FrameLayout>